--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
   <body>
     <script src="main.js"></script>
     <button onclick="crasher()">Start</button>
+    <button onclick="crasherWINDOW()">Start (Opens Windows)</button>
   </body>
 </html>
